// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`C4 snapshot — c4-component-api-server (C4Component) > palette "AskJamie" (id: askjamie) matches snapshot 1`] = `
"%%{init: {"theme": "base", "themeVariables": {"personBkg": "#fdfbf7", "personBorder": "#2d6f7e", "mainBkg": "#fdfbf7", "nodeBorder": "#2d6f7e", "lineColor": "#2d6f7e", "titleColor": "#2d6f7e", "primaryColor": "#fdfbf7", "primaryTextColor": "#2e2b29", "primaryBorderColor": "#2d6f7e", "secondaryColor": "#f6f2ee", "secondaryTextColor": "#2e2b29", "secondaryBorderColor": "#2d6f7e", "tertiaryColor": "#e1ecef", "tertiaryTextColor": "#2e2b29", "tertiaryBorderColor": "#2d6f7e", "textColor": "#2e2b29", "background": "#f6f2ee", "clusterBkg": "#e8f4f7", "edgeLabelBackground": "#f6f2ee", "fontFamily": "Open Sans, system-ui, sans-serif"}}}%%
C4Component
    title Component Diagram — API Server

    Person(learner, "Learner", "Uses the platform via browser")

    Container_Boundary(api, "API Server (Node.js / Express)") {
        Component(authCtrl, "Auth Controller", "Express Router", "Handles login, logout, and token refresh endpoints")
        Component(courseCtrl, "Course Controller", "Express Router", "Serves course catalog, enrollments, and progress")
        Component(authSvc, "Auth Service", "Node.js module", "Validates credentials and issues JWT session tokens")
        Component(courseSvc, "Course Service", "Node.js module", "Applies business rules for enrollment and progress")
        Component(userRepo, "User Repository", "Drizzle ORM", "Reads and writes user and session records")
        Component(courseRepo, "Course Repository", "Drizzle ORM", "Reads and writes course and enrollment records")
    }

    ContainerDb(db, "Primary Database", "PostgreSQL", "Stores all platform data")
    System_Ext(idp, "Identity Provider", "Issues OAuth 2.0 tokens")
    Container(spa, "Single-Page App", "React", "Delivers the learning UI to the browser")

    Rel(learner, spa, "Uses", "HTTPS")
    Rel(spa, authCtrl, "POST /auth/login", "HTTPS / JSON")
    Rel(spa, courseCtrl, "GET /courses, POST /enroll", "HTTPS / JSON")
    Rel(authCtrl, authSvc, "Delegates to")
    Rel(courseCtrl, courseSvc, "Delegates to")
    Rel(authSvc, idp, "Validates token via", "OAuth 2.0")
    Rel(authSvc, userRepo, "Reads and writes")
    Rel(courseSvc, userRepo, "Reads user data")
    Rel(courseSvc, courseRepo, "Reads and writes")
    Rel(userRepo, db, "Queries", "SQL / TCP")
    Rel(courseRepo, db, "Queries", "SQL / TCP")"
`;

exports[`C4 snapshot — c4-component-api-server (C4Component) > palette "Glee-fully" (id: glee-fully) matches snapshot 1`] = `
"%%{init: {"theme": "base", "themeVariables": {"personBkg": "#fffdfa", "personBorder": "#d94f63", "mainBkg": "#fffdfa", "nodeBorder": "#d94f63", "lineColor": "#d94f63", "titleColor": "#d94f63", "primaryColor": "#fffdfa", "primaryTextColor": "#2e2b29", "primaryBorderColor": "#d94f63", "secondaryColor": "#f6f2ee", "secondaryTextColor": "#2e2b29", "secondaryBorderColor": "#d94f63", "tertiaryColor": "#e5d9ce", "tertiaryTextColor": "#2e2b29", "tertiaryBorderColor": "#d94f63", "textColor": "#2e2b29", "background": "#fff7f1", "clusterBkg": "#f9f3ef", "edgeLabelBackground": "#fff7f1", "fontFamily": "Open Sans, system-ui, sans-serif"}}}%%
C4Component
    title Component Diagram — API Server

    Person(learner, "Learner", "Uses the platform via browser")

    Container_Boundary(api, "API Server (Node.js / Express)") {
        Component(authCtrl, "Auth Controller", "Express Router", "Handles login, logout, and token refresh endpoints")
        Component(courseCtrl, "Course Controller", "Express Router", "Serves course catalog, enrollments, and progress")
        Component(authSvc, "Auth Service", "Node.js module", "Validates credentials and issues JWT session tokens")
        Component(courseSvc, "Course Service", "Node.js module", "Applies business rules for enrollment and progress")
        Component(userRepo, "User Repository", "Drizzle ORM", "Reads and writes user and session records")
        Component(courseRepo, "Course Repository", "Drizzle ORM", "Reads and writes course and enrollment records")
    }

    ContainerDb(db, "Primary Database", "PostgreSQL", "Stores all platform data")
    System_Ext(idp, "Identity Provider", "Issues OAuth 2.0 tokens")
    Container(spa, "Single-Page App", "React", "Delivers the learning UI to the browser")

    Rel(learner, spa, "Uses", "HTTPS")
    Rel(spa, authCtrl, "POST /auth/login", "HTTPS / JSON")
    Rel(spa, courseCtrl, "GET /courses, POST /enroll", "HTTPS / JSON")
    Rel(authCtrl, authSvc, "Delegates to")
    Rel(courseCtrl, courseSvc, "Delegates to")
    Rel(authSvc, idp, "Validates token via", "OAuth 2.0")
    Rel(authSvc, userRepo, "Reads and writes")
    Rel(courseSvc, userRepo, "Reads user data")
    Rel(courseSvc, courseRepo, "Reads and writes")
    Rel(userRepo, db, "Queries", "SQL / TCP")
    Rel(courseRepo, db, "Queries", "SQL / TCP")"
`;

exports[`C4 snapshot — c4-component-api-server (C4Component) > palette "OKHP3" (id: overkill-hill) matches snapshot 1`] = `
"%%{init: {"theme": "base", "themeVariables": {"personBkg": "#111827", "personBorder": "#c46a2c", "mainBkg": "#111827", "nodeBorder": "#c46a2c", "lineColor": "#c46a2c", "titleColor": "#c46a2c", "primaryColor": "#111827", "primaryTextColor": "#e5e7eb", "primaryBorderColor": "#c46a2c", "secondaryColor": "#181f26", "secondaryTextColor": "#e5e7eb", "secondaryBorderColor": "#c46a2c", "tertiaryColor": "#1c3a34", "tertiaryTextColor": "#e5e7eb", "tertiaryBorderColor": "#c46a2c", "textColor": "#e5e7eb", "background": "#111827", "clusterBkg": "#0d1117", "edgeLabelBackground": "#181f26", "fontFamily": "DM Sans, system-ui, sans-serif"}}}%%
C4Component
    title Component Diagram — API Server

    Person(learner, "Learner", "Uses the platform via browser")

    Container_Boundary(api, "API Server (Node.js / Express)") {
        Component(authCtrl, "Auth Controller", "Express Router", "Handles login, logout, and token refresh endpoints")
        Component(courseCtrl, "Course Controller", "Express Router", "Serves course catalog, enrollments, and progress")
        Component(authSvc, "Auth Service", "Node.js module", "Validates credentials and issues JWT session tokens")
        Component(courseSvc, "Course Service", "Node.js module", "Applies business rules for enrollment and progress")
        Component(userRepo, "User Repository", "Drizzle ORM", "Reads and writes user and session records")
        Component(courseRepo, "Course Repository", "Drizzle ORM", "Reads and writes course and enrollment records")
    }

    ContainerDb(db, "Primary Database", "PostgreSQL", "Stores all platform data")
    System_Ext(idp, "Identity Provider", "Issues OAuth 2.0 tokens")
    Container(spa, "Single-Page App", "React", "Delivers the learning UI to the browser")

    Rel(learner, spa, "Uses", "HTTPS")
    Rel(spa, authCtrl, "POST /auth/login", "HTTPS / JSON")
    Rel(spa, courseCtrl, "GET /courses, POST /enroll", "HTTPS / JSON")
    Rel(authCtrl, authSvc, "Delegates to")
    Rel(courseCtrl, courseSvc, "Delegates to")
    Rel(authSvc, idp, "Validates token via", "OAuth 2.0")
    Rel(authSvc, userRepo, "Reads and writes")
    Rel(courseSvc, userRepo, "Reads user data")
    Rel(courseSvc, courseRepo, "Reads and writes")
    Rel(userRepo, db, "Queries", "SQL / TCP")
    Rel(courseRepo, db, "Queries", "SQL / TCP")"
`;

exports[`C4 snapshot — c4-container-learning-platform (C4Container) > palette "AskJamie" (id: askjamie) matches snapshot 1`] = `
"%%{init: {"theme": "base", "themeVariables": {"personBkg": "#fdfbf7", "personBorder": "#2d6f7e", "mainBkg": "#fdfbf7", "nodeBorder": "#2d6f7e", "lineColor": "#2d6f7e", "titleColor": "#2d6f7e", "primaryColor": "#fdfbf7", "primaryTextColor": "#2e2b29", "primaryBorderColor": "#2d6f7e", "secondaryColor": "#f6f2ee", "secondaryTextColor": "#2e2b29", "secondaryBorderColor": "#2d6f7e", "tertiaryColor": "#e1ecef", "tertiaryTextColor": "#2e2b29", "tertiaryBorderColor": "#2d6f7e", "textColor": "#2e2b29", "background": "#f6f2ee", "clusterBkg": "#e8f4f7", "edgeLabelBackground": "#f6f2ee", "fontFamily": "Open Sans, system-ui, sans-serif"}}}%%
C4Container
    title Container Diagram — Online Learning Platform

    Person(learner, "Learner", "Enrolls in courses and tracks progress")
    Person(instructor, "Instructor", "Creates and manages course content")

    System_Boundary(platform, "Learning Platform") {
        Container(spa, "Single-Page App", "React", "Delivers the learning UI to the learner's browser")
        Container(api, "API Server", "Node.js / Express", "Handles business logic, auth, and data access")
        ContainerDb(db, "Primary Database", "PostgreSQL", "Stores users, courses, enrollments, and progress")
        Container(queue, "Message Queue", "RabbitMQ", "Decouples notification delivery from request handling")
        Container(notify, "Notification Worker", "Node.js", "Consumes queue events and sends emails and push alerts")
    }

    System_Ext(idp, "Identity Provider", "Single sign-on via OAuth 2.0")
    System_Ext(payment, "Payment Gateway", "Processes course purchases")
    System_Ext(cdn, "CDN", "Serves static assets and video content globally")

    Rel(learner, spa, "Uses", "HTTPS")
    Rel(instructor, spa, "Uses", "HTTPS")
    Rel(spa, api, "Calls", "HTTPS / JSON")
    Rel(api, db, "Reads and writes", "TCP")
    Rel(api, queue, "Publishes events to", "AMQP")
    Rel(queue, notify, "Delivers events to", "AMQP")
    Rel(api, idp, "Authenticates users via", "OAuth 2.0")
    Rel(api, payment, "Processes payments via", "HTTPS")
    Rel(spa, cdn, "Loads assets from", "HTTPS")"
`;

exports[`C4 snapshot — c4-container-learning-platform (C4Container) > palette "Glee-fully" (id: glee-fully) matches snapshot 1`] = `
"%%{init: {"theme": "base", "themeVariables": {"personBkg": "#fffdfa", "personBorder": "#d94f63", "mainBkg": "#fffdfa", "nodeBorder": "#d94f63", "lineColor": "#d94f63", "titleColor": "#d94f63", "primaryColor": "#fffdfa", "primaryTextColor": "#2e2b29", "primaryBorderColor": "#d94f63", "secondaryColor": "#f6f2ee", "secondaryTextColor": "#2e2b29", "secondaryBorderColor": "#d94f63", "tertiaryColor": "#e5d9ce", "tertiaryTextColor": "#2e2b29", "tertiaryBorderColor": "#d94f63", "textColor": "#2e2b29", "background": "#fff7f1", "clusterBkg": "#f9f3ef", "edgeLabelBackground": "#fff7f1", "fontFamily": "Open Sans, system-ui, sans-serif"}}}%%
C4Container
    title Container Diagram — Online Learning Platform

    Person(learner, "Learner", "Enrolls in courses and tracks progress")
    Person(instructor, "Instructor", "Creates and manages course content")

    System_Boundary(platform, "Learning Platform") {
        Container(spa, "Single-Page App", "React", "Delivers the learning UI to the learner's browser")
        Container(api, "API Server", "Node.js / Express", "Handles business logic, auth, and data access")
        ContainerDb(db, "Primary Database", "PostgreSQL", "Stores users, courses, enrollments, and progress")
        Container(queue, "Message Queue", "RabbitMQ", "Decouples notification delivery from request handling")
        Container(notify, "Notification Worker", "Node.js", "Consumes queue events and sends emails and push alerts")
    }

    System_Ext(idp, "Identity Provider", "Single sign-on via OAuth 2.0")
    System_Ext(payment, "Payment Gateway", "Processes course purchases")
    System_Ext(cdn, "CDN", "Serves static assets and video content globally")

    Rel(learner, spa, "Uses", "HTTPS")
    Rel(instructor, spa, "Uses", "HTTPS")
    Rel(spa, api, "Calls", "HTTPS / JSON")
    Rel(api, db, "Reads and writes", "TCP")
    Rel(api, queue, "Publishes events to", "AMQP")
    Rel(queue, notify, "Delivers events to", "AMQP")
    Rel(api, idp, "Authenticates users via", "OAuth 2.0")
    Rel(api, payment, "Processes payments via", "HTTPS")
    Rel(spa, cdn, "Loads assets from", "HTTPS")"
`;

exports[`C4 snapshot — c4-container-learning-platform (C4Container) > palette "OKHP3" (id: overkill-hill) matches snapshot 1`] = `
"%%{init: {"theme": "base", "themeVariables": {"personBkg": "#111827", "personBorder": "#c46a2c", "mainBkg": "#111827", "nodeBorder": "#c46a2c", "lineColor": "#c46a2c", "titleColor": "#c46a2c", "primaryColor": "#111827", "primaryTextColor": "#e5e7eb", "primaryBorderColor": "#c46a2c", "secondaryColor": "#181f26", "secondaryTextColor": "#e5e7eb", "secondaryBorderColor": "#c46a2c", "tertiaryColor": "#1c3a34", "tertiaryTextColor": "#e5e7eb", "tertiaryBorderColor": "#c46a2c", "textColor": "#e5e7eb", "background": "#111827", "clusterBkg": "#0d1117", "edgeLabelBackground": "#181f26", "fontFamily": "DM Sans, system-ui, sans-serif"}}}%%
C4Container
    title Container Diagram — Online Learning Platform

    Person(learner, "Learner", "Enrolls in courses and tracks progress")
    Person(instructor, "Instructor", "Creates and manages course content")

    System_Boundary(platform, "Learning Platform") {
        Container(spa, "Single-Page App", "React", "Delivers the learning UI to the learner's browser")
        Container(api, "API Server", "Node.js / Express", "Handles business logic, auth, and data access")
        ContainerDb(db, "Primary Database", "PostgreSQL", "Stores users, courses, enrollments, and progress")
        Container(queue, "Message Queue", "RabbitMQ", "Decouples notification delivery from request handling")
        Container(notify, "Notification Worker", "Node.js", "Consumes queue events and sends emails and push alerts")
    }

    System_Ext(idp, "Identity Provider", "Single sign-on via OAuth 2.0")
    System_Ext(payment, "Payment Gateway", "Processes course purchases")
    System_Ext(cdn, "CDN", "Serves static assets and video content globally")

    Rel(learner, spa, "Uses", "HTTPS")
    Rel(instructor, spa, "Uses", "HTTPS")
    Rel(spa, api, "Calls", "HTTPS / JSON")
    Rel(api, db, "Reads and writes", "TCP")
    Rel(api, queue, "Publishes events to", "AMQP")
    Rel(queue, notify, "Delivers events to", "AMQP")
    Rel(api, idp, "Authenticates users via", "OAuth 2.0")
    Rel(api, payment, "Processes payments via", "HTTPS")
    Rel(spa, cdn, "Loads assets from", "HTTPS")"
`;

exports[`C4 snapshot — c4-dynamic-user-login (C4Dynamic) > palette "AskJamie" (id: askjamie) matches snapshot 1`] = `
"%%{init: {"theme": "base", "themeVariables": {"personBkg": "#fdfbf7", "personBorder": "#2d6f7e", "mainBkg": "#fdfbf7", "nodeBorder": "#2d6f7e", "lineColor": "#2d6f7e", "titleColor": "#2d6f7e", "primaryColor": "#fdfbf7", "primaryTextColor": "#2e2b29", "primaryBorderColor": "#2d6f7e", "secondaryColor": "#f6f2ee", "secondaryTextColor": "#2e2b29", "secondaryBorderColor": "#2d6f7e", "tertiaryColor": "#e1ecef", "tertiaryTextColor": "#2e2b29", "tertiaryBorderColor": "#2d6f7e", "textColor": "#2e2b29", "background": "#f6f2ee", "clusterBkg": "#e8f4f7", "edgeLabelBackground": "#f6f2ee", "fontFamily": "Open Sans, system-ui, sans-serif"}}}%%
C4Dynamic
    title Dynamic Diagram — User Login Across Containers

    Person(user, "Learner", "Authenticates to access courses")

    Boundary(platform, "Learning Platform") {
        Container(spa, "Single-Page App", "React", "Hosts the login form and session state")
        Container(api, "API Server", "Node.js", "Validates credentials and issues session tokens")
        ContainerDb(db, "Primary Database", "PostgreSQL", "Stores user records and active sessions")
    }

    System_Ext(idp, "Identity Provider", "Issues OAuth 2.0 tokens")

    Rel(user, spa, "1. Submits login form", "HTTPS")
    Rel(spa, api, "2. POST /auth/login", "HTTPS / JSON")
    Rel(api, idp, "3. Redirect to SSO", "OAuth 2.0")
    Rel(idp, api, "4. Returns auth code", "OAuth 2.0")
    Rel(api, db, "5. Upsert user session", "SQL")
    Rel(api, spa, "6. Issues session token", "HTTPS / JSON")
    Rel(spa, user, "7. Redirects to dashboard", "Browser")"
`;

exports[`C4 snapshot — c4-dynamic-user-login (C4Dynamic) > palette "Glee-fully" (id: glee-fully) matches snapshot 1`] = `
"%%{init: {"theme": "base", "themeVariables": {"personBkg": "#fffdfa", "personBorder": "#d94f63", "mainBkg": "#fffdfa", "nodeBorder": "#d94f63", "lineColor": "#d94f63", "titleColor": "#d94f63", "primaryColor": "#fffdfa", "primaryTextColor": "#2e2b29", "primaryBorderColor": "#d94f63", "secondaryColor": "#f6f2ee", "secondaryTextColor": "#2e2b29", "secondaryBorderColor": "#d94f63", "tertiaryColor": "#e5d9ce", "tertiaryTextColor": "#2e2b29", "tertiaryBorderColor": "#d94f63", "textColor": "#2e2b29", "background": "#fff7f1", "clusterBkg": "#f9f3ef", "edgeLabelBackground": "#fff7f1", "fontFamily": "Open Sans, system-ui, sans-serif"}}}%%
C4Dynamic
    title Dynamic Diagram — User Login Across Containers

    Person(user, "Learner", "Authenticates to access courses")

    Boundary(platform, "Learning Platform") {
        Container(spa, "Single-Page App", "React", "Hosts the login form and session state")
        Container(api, "API Server", "Node.js", "Validates credentials and issues session tokens")
        ContainerDb(db, "Primary Database", "PostgreSQL", "Stores user records and active sessions")
    }

    System_Ext(idp, "Identity Provider", "Issues OAuth 2.0 tokens")

    Rel(user, spa, "1. Submits login form", "HTTPS")
    Rel(spa, api, "2. POST /auth/login", "HTTPS / JSON")
    Rel(api, idp, "3. Redirect to SSO", "OAuth 2.0")
    Rel(idp, api, "4. Returns auth code", "OAuth 2.0")
    Rel(api, db, "5. Upsert user session", "SQL")
    Rel(api, spa, "6. Issues session token", "HTTPS / JSON")
    Rel(spa, user, "7. Redirects to dashboard", "Browser")"
`;

exports[`C4 snapshot — c4-dynamic-user-login (C4Dynamic) > palette "OKHP3" (id: overkill-hill) matches snapshot 1`] = `
"%%{init: {"theme": "base", "themeVariables": {"personBkg": "#111827", "personBorder": "#c46a2c", "mainBkg": "#111827", "nodeBorder": "#c46a2c", "lineColor": "#c46a2c", "titleColor": "#c46a2c", "primaryColor": "#111827", "primaryTextColor": "#e5e7eb", "primaryBorderColor": "#c46a2c", "secondaryColor": "#181f26", "secondaryTextColor": "#e5e7eb", "secondaryBorderColor": "#c46a2c", "tertiaryColor": "#1c3a34", "tertiaryTextColor": "#e5e7eb", "tertiaryBorderColor": "#c46a2c", "textColor": "#e5e7eb", "background": "#111827", "clusterBkg": "#0d1117", "edgeLabelBackground": "#181f26", "fontFamily": "DM Sans, system-ui, sans-serif"}}}%%
C4Dynamic
    title Dynamic Diagram — User Login Across Containers

    Person(user, "Learner", "Authenticates to access courses")

    Boundary(platform, "Learning Platform") {
        Container(spa, "Single-Page App", "React", "Hosts the login form and session state")
        Container(api, "API Server", "Node.js", "Validates credentials and issues session tokens")
        ContainerDb(db, "Primary Database", "PostgreSQL", "Stores user records and active sessions")
    }

    System_Ext(idp, "Identity Provider", "Issues OAuth 2.0 tokens")

    Rel(user, spa, "1. Submits login form", "HTTPS")
    Rel(spa, api, "2. POST /auth/login", "HTTPS / JSON")
    Rel(api, idp, "3. Redirect to SSO", "OAuth 2.0")
    Rel(idp, api, "4. Returns auth code", "OAuth 2.0")
    Rel(api, db, "5. Upsert user session", "SQL")
    Rel(api, spa, "6. Issues session token", "HTTPS / JSON")
    Rel(spa, user, "7. Redirects to dashboard", "Browser")"
`;
